--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pyfiglet = "^0.8.post1"
 pyyaml = "^5.3.1"
 requests = "^2.24.0"
 python-jose = "^3.2.0"
-cotter = {git = "https://github.com/theFong/python-sdk.git"}
+cotter = "^0.0.5"
 
 
 [tool.poetry.dev-dependencies]
