--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pyyaml = "^5.3.1"
 requests = "^2.24.0"
 python-jose = "^3.2.0"
 cotter = {git = "https://github.com/theFong/python-sdk.git"}
+yaspin = "^1.3.0"
 
 
 
